styles/style.css
/*--------------------CSS General------------------------*/
  *{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Prompt', sans-serif;
    scroll-behavior: smooth;
  }
  body {
    display: flex;
    width: 100%;
    justify-content: center;
    color: aliceblue;
    background-color: rgb(22, 21, 23);
  }
  main {
    overflow-x: hidden;
    height: 100dvh;
    width: 100%;
    scroll-snap-type: y mandatory;
  }
  h1{
    font-weight: bold;
    font-size: 60px;
    background: linear-gradient(216deg, #EBB363, #3c699a);
    background-size: 400% 400%;
    animation: titles 3s ease infinite;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
  ::-webkit-scrollbar{
    display: none;
  }
  .sphere1{
    position: fixed;
    top: -20rem;
    left: -20rem;
    background-image: linear-gradient(216deg, #EBB363, #2a6bb0fd);
    border-radius: 50%;
    height: 30rem;
    width: 70rem;
    z-index: -1;
    filter: blur(200px);
    animation: titles 10s ease infinite;
    background-size: 200% 200%;
  }
  .sphere2{
    position: fixed;
    bottom: -30rem;
    right: -25rem;
    background-image: linear-gradient(216deg, #2a6bb0fd, #EBB363);
    border-radius: 50%;
    height: 40rem;
    width: 70rem;
    z-index: -1;
    filter: blur(200px);
    animation: titles 10s ease infinite;
    background-size: 200% 200%;
  }

/*--------------------Header------------------------*/

  header {
    color: #494949;
    padding: 0 3rem;
    height: 5rem;
    display: flex;
    width: 100%;
    align-content: center;
    justify-content: space-between;
    position: fixed;
  }
  header a {
    display: flex;
  }
  header .img-container {
    display: flex;
    justify-content: flex-start;
    padding: 0 1rem;
  }
  header img {
    width: 50px;
    object-fit: scale-down;
  }
  #burger{
    display: none;
    padding: 1rem;
  }
  #burger-icon{
    width: 3rem;
    padding: 0 1rem;
    visibility: hidden;
  }
  nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    justify-content: flex-end;
  }
  nav ul {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    margin: 0;
  }
  nav ul li {
    margin-left: 20px;
    margin: auto;
    display: flex;
    align-items: center;
    padding: .5rem 1rem;
    border-radius: 0.5rem;
    transition: all 500ms;
  }
  nav li:hover {
    color: aliceblue;
    background: linear-gradient(216deg, #EBB363, #3c699a);
    background-size: 400% 400%;
    animation: titles 3s ease infinite;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    transform: translateY(-3px);
    transition: all 500ms;
  }
  nav a{
    text-decoration: none;
    color: aliceblue;
    font-weight: bold;
  }

/*--------------------Secciones general------------------------*/

.container {
  padding: 0 2rem;
  width: 100%;
}
section {
  margin: auto;
  display: flex;
  justify-content: center;
  text-align: center;
  max-width: 1500px;
  opacity: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  scroll-snap-align: start;
  height: 100dvh;
  padding-top: 5rem;
}
section ul{
  text-align: left;
  padding-left: 3rem;
}
#burger-modal{
  display: flex;
  flex-direction: column;
  padding-top: 5rem;
  gap: 8rem;
  align-items: center;
  opacity: 0;
  visibility: hidden;
  position: fixed;
  height: 100%;
  width: 100%;
  backdrop-filter: blur(50px);
  transition: 300ms;
  z-index: 2;
}
#burger-modal ul{
  list-style: none;
  text-align: center;
  position: absolute;
  top: 40%;
}
#burger-modal li{
  color: aliceblue;
  line-height: 4rem;
  font-size: 24px;
}
#burger-modal a{
  text-decoration: none;
}
#burger-modal img{
  width: 60px;
}
#burger-icon{
  visibility: hidden;
}

/*--------------------Seccion Hero------------------------*/

#hero {
  display: flex;
  justify-content:left;
  max-width: 1500px;
  width: 100%;
  padding-top: 100px;
  height: 100vh;
  background-image: url("../Assets/img/hero.png");
  background-size: 50rem;
  background-repeat: no-repeat;
  background-position: right;
}
#hero .container {
  display: flex;
  font-family: 'Russo one', 'sans-serif';
  flex-direction: column;
  width: 100%;
  max-width: 800px;
  text-align: left;
  text-shadow: 3px 3px 5px black;
  padding-left: 5rem;
}
#hero .container :nth-child(2){
  text-align: right;
}
#hero span{
  text-align: left;
  font-weight: bold;
  font-size: 70px;
  font-family: 'Gruppo', sans-serif;
  font-weight: 100;
}
#hero a {
  display: flex;
  justify-content: center;
  margin-top: 5rem;
  text-decoration: none;
  color: aliceblue;
  border:1px solid #EBB363;
  padding: .5rem 1rem;
  border-radius: .5rem;
  width: 100%;
  max-width: 20rem;
}
#hero a:hover {
  background: linear-gradient(216deg, #EBB363, #3c699a);
  background-size: 400% 400%;
  animation: titles 3s ease infinite;
  border: 1px solid transparent;
}

/*--------------------Seccion About------------------------*/

#about .container{
  max-width: 1200px;
}
#about p {
  text-align: center;
}

/*--------------------Seccion Education------------------------*/

.studies-contanier{
  display: flex;
  justify-content: center;
  align-items: end;
  flex-wrap: wrap;
}
.study{
  max-width: 300px;
}
.study h2{
  padding: 1rem;
}
.study p{
  border-top: 5px solid #EBB363;
}
#education .container{
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: column;
  height: 100%;
}
#education .study img{
  height: 10px;
  width: 10px;
  object-fit: cover;
}
#education .skills-container{
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  width: 100%;
  justify-content: space-around;
  max-width: 1200px;
}
#education p{
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  gap: .5rem;
}
#education img{
  width: 50px;
  height: 50px;
}

/*--------------------Seccion Projectos------------------------*/

#projects {
  text-align: center;
  display: flex;
  flex-direction: column;
}
#projects img{
  width: 350px;
  height: 115px;
  object-fit: scale-down;
  padding: 1rem 2rem;
}
#projects .container {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 1rem;
  justify-content: center;
}
#projects a.other{
  text-decoration: none;
  color: aliceblue;
  font-family: 'Gruppo', sans-serif;
  font-size: 80px;
  text-shadow: 5px 5px 20px black;
}
.project {
  display: flex;
  align-items: center;
}
.project img{
  width: 50%;
  flex-basis: 50%;
}
.project .datos{
  padding: 2rem;
  padding-right: 5rem;
}
.project p{
  text-align: left;
  padding: 1rem 0;
}
.project h3 {
  margin: 0;
}
.project a {
  display: flex;
  text-decoration: none;
  justify-content: center;
  color: aliceblue;
  background-color: #f0f0f07d;
  padding: .5rem 1rem;
  border-radius: .5rem;
  width: 100%;
  margin-top: 1rem;
}
.project a:hover {
  background: linear-gradient(216deg, #EBB363, #3c699a);
  background-size: 400% 400%;
  animation: titles 3s ease infinite;
}
section.slide-in {
  animation: slideIn 0.5s ease-in-out;
  opacity: 1;
}
#other-projects{
  display: flex;
  flex-direction: column;
}
#other-projects a{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  text-decoration: none;
  color: aliceblue;
}
#other-projects .container{
  gap: 2rem;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
  padding-top: 5rem;
}
#other-projects img{
  width: 60px;
  height: 60px;
}

/*--------------------Seccion Contacto------------------------*/

#contact {
  display: flex;
  flex-direction: column;
}
#contact .icon-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
}
#contact p{
  display: flex;
  flex-direction: column;
  padding: 1rem 2rem;
  gap: 1rem;
}
#contact img{
  width: 40px;
  height: 40px;
}

/*--------------------Animaciones------------------------*/

@keyframes slideIn {
  0% {
    opacity: 0;
    transform: translateX(200px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}
@keyframes titles {
  0% {
    background-position: 96% 0%;
  }
  50% {
    background-position: 5% 10%;
  }
  100% {
    background-position: 96% 0%;
  }
}

/*----------------------------------------------------------------
                            Responsive
-----------------------------------------------------------------*/

@media screen and (max-width: 900px) { 
  
  /*general*/

  h1{
    font-size: 40px;
  }
  section{
    padding-top: 3rem;
  }
  .sphere1{
    top: -25rem;
    left: -35rem;
    filter: blur(100px);
    transition: all 500ms;
  }
  .sphere2{
    bottom: -35rem;
    right: -15rem;
    filter: blur(100px);
    transition: all 500ms;
  }

  /*header*/

  #burger-icon{
    visibility: visible;
  }
  nav{
    display: none;
  }
  header img{
    width: 30px;
  }
  header{
    height: 3rem;
    padding: 0 1rem;
  }

  /*hero*/
  
  #hero{
    background-image: url("./Assets/img/hero.png");
    background-position: bottom;
    background-size: contain;
    justify-content: center;
    align-items: flex-start;
    padding-top: 1rem;
  }
  #hero .container{
    max-width: 100%;
    padding-top: 10rem;
    padding-left: 2rem;
    align-items: center;
  }
  #hero span{
    font-size: 9vw;
    padding-bottom: 1rem;
  }
  #hero h3{
    font-size: 16px;
  }
  #hero a {
    background: linear-gradient(216deg, #EBB363, #3c699a);
    background-size: 400% 400%;
    animation: titles 3s ease infinite;
    border: 1px solid transparent;
  }

  /*Education*/

  .studies-contanier{
    gap: 1rem;
  }
  .study{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-bottom: 2rem;
    background-color: rgba(240, 248, 255, 0.081);
    backdrop-filter: blur(10px);
    border-radius: 1rem;
    width: 150px;
    height: 150px;
    padding: .5rem;
  }
  .study h2{
    font-size: 16px;
    padding: 0 1rem;
    border: none;
  }

  .study p{
  border-top: none;
  }
  #education img{
    width: 30px;
    height: 30px;
  }
  #education .skills-container{
    gap: 2rem;
  }

  /*projects*/

  #projects .container{
    flex-direction: column;
  }
  .project{
    flex-direction: column;
    max-width: 500px;
  }
  .project img{
    width: 80%;
    object-fit: scale-down;
  }
  .project .datos{
    padding-right: 2rem;
  }
  .project a {
    background: linear-gradient(216deg, #EBB363, #3c699a);
    background-size: 400% 400%;
    animation: titles 3s ease infinite;
  }
}

